added a changeable grid, but now debuging the hovering aspect

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
 
-
-        
-    </div>
+    <div class="title">Etch A Sketch</div>
+    <div class="girdAndMenu">
+        <div class="menu">
+            <div class="menuTitle">Menu</div>
+            <input type='range' min="10" max="100"value='16'class='slider' id="slider">
+            <button class='update grid' id="updateGrid">Update Grid</button>
+        </div>
+        <div class="container" id="grid"></div>
+    </div>    
 </body>
 </html>
