--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="menuTitle">Menu</div>
             <input type='range' min="10" max="100"value='16'class='slider' id="slider">
             <button class='update grid' id="updateGrid">Update Grid</button>
+            <input type='color' id="colorPicker" value="#ff0000">
         </div>
         <div class="container" id="grid"></div>
     </div>    
