scarped the color wheel and having a set 16 colors to choose from

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
         <div class="menu">
             <div class="menuTitle">Menu</div>
             <input type='range' min="10" max="100"value='16'class='slider' id="slider">
+            <div class="colorPicker">   
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="red"></button>
+            </div>     
             <div class='gridNumber' id="buttonNum"></div>
             <button class='updateGrid' id="updateGrid">Update Grid</button>
             <input type='color' id="colorPicker" value="#ff0000">
