added color 16 color options

--- a/index.html
+++ b/index.html
@@ -15,25 +15,26 @@
         <div class="menu">
             <div class="menuTitle">Menu</div>
             <input type='range' min="10" max="100"value='16'class='slider' id="slider">
-            <div class="colorPicker">   
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-                <button class="color" id="red"></button>
-            </div>     
             <div class='gridNumber' id="buttonNum"></div>
+            <div class="colorPicker">   
+                <button class="red"         ></button>
+                <button class="orange"      ></button>
+                <button class="yellow"      ></button>
+                <button class="lime_green"  ></button>
+                <button class="green"       ></button>
+                <button class="teal"        ></button>
+                <button class="dark_blue"   ></button>
+                <button class="baby_blue"   ></button>
+                <button class="blue"        ></button>
+                <button class="purple"      ></button>
+                <button class="pink"        ></button>
+                <button class="peach"       ></button>
+                <button class="brown"       ></button>
+                <button class="grey"        ></button>
+                <button class="white"       ></button>
+                <button class="black"       ></button>
+            </div>     
+            
             <button class='updateGrid' id="updateGrid">Update Grid</button>
             <input type='color' id="colorPicker" value="#ff0000">
             
