fixed color classes and id

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
             <input type='range' min="10" max="100"value='16'class='slider' id="slider">
             <div class='gridNumber' id="buttonNum"></div>
             <div class="colorPicker">   
-                <button class="red"         ></button>
-                <button class="orange"      ></button>
-                <button class="yellow"      ></button>
-                <button class="lime_green"  ></button>
-                <button class="green"       ></button>
-                <button class="teal"        ></button>
-                <button class="dark_blue"   ></button>
-                <button class="baby_blue"   ></button>
-                <button class="blue"        ></button>
-                <button class="purple"      ></button>
-                <button class="pink"        ></button>
-                <button class="peach"       ></button>
-                <button class="brown"       ></button>
-                <button class="grey"        ></button>
-                <button class="white"       ></button>
-                <button class="black"       ></button>
+                <button class="color" id="red"></button>
+                <button class="color" id="orange"></button>
+                <button class="color" id="yellow"></button>
+                <button class="color" id="lime_green"></button>
+                <button class="color" id="green"></button>
+                <button class="color" id="teal"></button>
+                <button class="color" id="dark_blue"></button>
+                <button class="color" id="baby_blue"></button>
+                <button class="color" id="blue"></button>
+                <button class="color" id="purple"></button>
+                <button class="color" id="pink"></button>
+                <button class="color" id="peach"></button>
+                <button class="color" id="brown"></button>
+                <button class="color" id="grey"></button>
+                <button class="color" id="white"></button>
+                <button class="color" id="black"></button>
             </div>     
             
             <button class='updateGrid' id="updateGrid">Update Grid</button>
