added styling to the webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="script.js" defer></script>
+    <link href='https://fonts.googleapis.com/css?family=Allerta Stencil' rel='stylesheet'>
 </head>
 <body>
 
@@ -19,8 +20,8 @@
                 <div class='gridNumber' id="buttonNum"></div>
             </div>
             <div class="butt">
-                <button id="hide_border">hide lines</button>
-                <button class='updateGrid' id="updateGrid">Update Grid</button>
+                <button class='infoButtons' id="hide_border">hide lines</button>
+                <button class='infoButtons' id="updateGrid">Update Grid</button>
             </div>
             <div class="colorPicker">   
                 <button class="color" id="red"></button>
